# IT-Start-Bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.admin  Dockerfile.bot  Dockerfile.core  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20241121_0001_initial.py  20241121_0002_align_with_db_tz.py  20241121_0003_admin_audit.py  20241121_0004_publication_status.py  20241121_0005_publication_schedule.py  20241121_0006_publication_deadline_notified.py  20241121_0007_tg_id_bigint.py  20251209_0008_add_contest_publication_type.py  20251210_0009_add_python_tag.py
docker/: entrypoint_core.sh
docs/: data_model.md  db_schemes.sql  gaps.md  openapi.json  roadmap.md  tasks.md  todo.md  Архитектура системы.docx  ТЗ. UI_UX.docx  ТЗ. User stories.docx  ТЗ. Агенты-парсеры.docx  ТЗ. Админка.docx  ТЗ. База данных.docx  ТЗ. ТГ бот и канал.docx
docs/adr/: 0001-architecture.md
parsers/: internships_parser.py  nastachku_parser.py  podlodka_parser.py  sentry_service.py  tbank_parser.py  vk_parser.py
src/itstart_admin/: .dockerignore  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/itstart_admin/src/: App.tsx  index.css
src/itstart_admin/src/components/admin-users/: CreateUserDialog.tsx  EditUserDialog.tsx
src/itstart_admin/src/components/auth/: ProtectedRoute.tsx  RoleGuard.tsx  TwoFASetup.tsx
src/itstart_admin/src/components/export/: ExportDialog.tsx
src/itstart_admin/src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
src/itstart_admin/src/components/parsers/: CreateParserDialog.tsx  EditParserDialog.tsx
src/itstart_admin/src/components/publications/: CreatePublicationDialog.tsx  DeclinePublicationDialog.tsx  EditPublicationDialog.tsx
src/itstart_admin/src/components/tags/: CreateTagDialog.tsx  EditTagDialog.tsx
src/itstart_admin/src/components/ui/: alert-dialog.tsx  calendar.tsx  checkbox.tsx  date-picker.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  select.tsx  toast.tsx
src/itstart_admin/src/hooks/: use-admin-users.ts  use-auth.ts  use-export.ts  use-parsers.ts  use-publications.ts  use-schedule.ts  use-stats.ts  use-tags.ts
src/itstart_admin/src/lib/: api.ts  auth.ts  constants.ts  date.ts  format.ts  query-client.ts  schemas.ts
src/itstart_admin/src/pages/: DashboardPage.tsx  NotFoundPage.tsx
src/itstart_admin/src/pages/admin-users/: UsersPage.tsx
src/itstart_admin/src/pages/auth/: LoginPage.tsx
src/itstart_admin/src/pages/parsers/: ParsersPage.tsx
src/itstart_admin/src/pages/publications/: PublicationDetailPage.tsx  PublicationsPage.tsx
src/itstart_admin/src/pages/schedule/: SchedulePage.tsx
src/itstart_admin/src/pages/stats/: StatsPage.tsx
src/itstart_admin/src/pages/tags/: TagsPage.tsx
src/itstart_admin/src/providers/: QueryProvider.tsx
src/itstart_admin/src/router/: index.tsx
src/itstart_admin/src/types/: api.ts
src/itstart_common/: __init__.py  db.py
src/itstart_core_api/: __init__.py  admin_users.py  api.py  auth.py  celery_app.py  config.py  crypto.py  db.py  dependencies.py  export.py  main.py  metrics.py  models.py  parsers.py  parsing_service.py  publications.py  rate_limiter.py  repositories.py  schedule.py  schemas.py  security.py  stats.py  tag_seed.py  tags.py  tasks.py
src/itstart_domain/: __init__.py  models.py
src/itstart_tg_bot/: __init__.py  bot.py  config.py  db.py  main.py  service.py
tests/: conftest.py  test_admin_audit.py  test_admin_users.py  test_admin_users_patch.py  test_auth.py  test_bot_service.py  test_change_password.py  test_healthz.py  test_metrics.py  test_parsers.py  test_parsing_service.py  test_pgp.py  test_publications_api.py  test_rate_limit.py  test_repositories.py  test_schedule.py  test_schemas.py  test_security.py  test_stats.py  test_tags.py  test_tasks.py  test_totp.py
